--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ derive_builder = "0.20"
 url = "2.5"
 regex = "1.10"
 chrono = "0.4"
+once_cell = "1.20"
 
 # CLI dependencies
 clap = { version = "4.5", features = ["derive", "color"] }
