--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ url = "2.5"
 regex = "1.10"
 chrono = "0.4"
 once_cell = "1.20"
+urlencoding = "2.1"
 
 # CLI dependencies
 clap = { version = "4.5", features = ["derive", "color"] }
