feat: native implementation if possible instead of JS

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ thirtyfour = "0.36"
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+http = "1"
 
 # Error handling
 thiserror = "2.0"
@@ -45,6 +46,7 @@ clap = { version = "4.5", features = ["derive", "color"] }
 reqwest = { version = "0.13", features = ["stream", "json"] }
 indicatif = "0.18"
 tokio-util = { version = "0.7", features = ["compat"] }
+tokio-tungstenite = "0.26"
 flate2 = "1.0"
 tar = "0.4"
 zip = "7.2"
